--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,17 @@ http {
             proxy_redirect off;
             proxy_pass http://php_apache/index.html;
         }
+
+        location /dotnet {
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-NginX-Proxy true;
+
+            proxy_redirect off;
+            proxy_pass http://whoami;
+        }
         
         location /whoami {
             proxy_set_header X-Real-IP $remote_addr;
