unificando o docker-compose

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
             proxy_set_header X-NginX-Proxy true;
 
             proxy_redirect off;
-            proxy_pass http://whoami;
+            proxy_pass http://dotnet_weather/WeatherForecast;
         }
         
         location /whoami {
